// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sets a new state 1`] = `
Object {
  "main": Object {
    "bobLoblaw": "Has a law blog",
    "classifier": Object {
      "annotations": Array [],
      "classification": Object {},
      "currentWorkflowID": 0,
      "guide": Object {},
      "isFetching": true,
      "needsTutorial": Object {},
      "nextSubject": Object {},
      "project": Object {},
      "questionContainerHeight": Object {},
      "seenThisSession": Object {},
      "subject": Object {},
      "subjectSizes": Object {},
      "tutorial": Object {},
      "upcomingSubjects": Object {},
      "workflow": Object {},
    },
    "errorMessage": null,
    "isConnected": null,
    "isFetching": false,
    "notificationPayload": Object {},
    "notificationProject": Object {},
    "notifications": Object {
      "general": true,
    },
    "pushEnabled": false,
    "pushPrompted": false,
    "registration": Object {
      "global_email_communication": true,
    },
    "selectedDiscipline": null,
    "session": Object {},
    "settings": Object {
      "promptForWorkflow": false,
    },
    "webViewNavCounter": 0,
  },
  "navBar": Object {
    "titles": Object {},
  },
  "projects": Object {
    "isFailure": false,
    "isLoading": false,
    "isSuccess": false,
    "projectList": Array [],
  },
  "user": Object {},
}
`;

exports[`sets state from initial state 1`] = `
Object {
  "main": Object {
    "classifier": Object {
      "annotations": Array [],
      "classification": Object {},
      "currentWorkflowID": 0,
      "guide": Object {},
      "isFetching": true,
      "needsTutorial": Object {},
      "nextSubject": Object {},
      "project": Object {},
      "questionContainerHeight": Object {},
      "seenThisSession": Object {},
      "subject": Object {},
      "subjectSizes": Object {},
      "tutorial": Object {},
      "upcomingSubjects": Object {},
      "workflow": Object {},
    },
    "errorMessage": null,
    "isConnected": true,
    "isFetching": false,
    "notificationPayload": Object {},
    "notificationProject": Object {},
    "notifications": Object {
      "general": true,
    },
    "pushEnabled": false,
    "pushPrompted": false,
    "registration": Object {
      "global_email_communication": true,
    },
    "selectedDiscipline": null,
    "session": Object {},
    "settings": Object {
      "promptForWorkflow": false,
    },
    "webViewNavCounter": 0,
  },
  "navBar": Object {
    "titles": Object {},
  },
  "projects": Object {
    "isFailure": false,
    "isLoading": false,
    "isSuccess": false,
    "projectList": Array [],
  },
  "user": Object {},
}
`;

exports[`sets user 1`] = `
Object {
  "main": Object {
    "classifier": Object {
      "annotations": Array [],
      "classification": Object {},
      "currentWorkflowID": 0,
      "guide": Object {},
      "isFetching": true,
      "needsTutorial": Object {},
      "nextSubject": Object {},
      "project": Object {},
      "questionContainerHeight": Object {},
      "seenThisSession": Object {},
      "subject": Object {},
      "subjectSizes": Object {},
      "tutorial": Object {},
      "upcomingSubjects": Object {},
      "workflow": Object {},
    },
    "errorMessage": null,
    "isConnected": null,
    "isFetching": false,
    "notificationPayload": Object {},
    "notificationProject": Object {},
    "notifications": Object {
      "general": true,
    },
    "pushEnabled": false,
    "pushPrompted": false,
    "registration": Object {
      "global_email_communication": true,
    },
    "selectedDiscipline": null,
    "session": Object {},
    "settings": Object {
      "promptForWorkflow": false,
    },
    "user": Object {
      "avatar": "Some avatar",
      "display_name": "Me",
    },
    "webViewNavCounter": 0,
  },
  "navBar": Object {
    "titles": Object {},
  },
  "projects": Object {
    "isFailure": false,
    "isLoading": false,
    "isSuccess": false,
    "projectList": Array [],
  },
  "user": Object {},
}
`;

exports[`unsets user 1`] = `
Object {
  "main": Object {
    "classifier": Object {
      "annotations": Array [],
      "classification": Object {},
      "currentWorkflowID": 0,
      "guide": Object {},
      "isFetching": true,
      "needsTutorial": Object {},
      "nextSubject": Object {},
      "project": Object {},
      "questionContainerHeight": Object {},
      "seenThisSession": Object {},
      "subject": Object {},
      "subjectSizes": Object {},
      "tutorial": Object {},
      "upcomingSubjects": Object {},
      "workflow": Object {},
    },
    "errorMessage": null,
    "isConnected": null,
    "isFetching": false,
    "notificationPayload": Object {},
    "notificationProject": Object {},
    "notifications": Object {
      "general": true,
    },
    "pushEnabled": false,
    "pushPrompted": false,
    "registration": Object {
      "global_email_communication": true,
    },
    "selectedDiscipline": null,
    "session": Object {},
    "settings": Object {
      "promptForWorkflow": false,
    },
    "user": Object {},
    "webViewNavCounter": 0,
  },
  "navBar": Object {
    "titles": Object {},
  },
  "projects": Object {
    "isFailure": false,
    "isLoading": false,
    "isSuccess": false,
    "projectList": Array [],
  },
  "user": Object {},
}
`;
